[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Eugene Anisimov <zero0061@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scripts = "^3.0"
colorama = "^0.4.6"
[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
